commit for top and bottom swipe

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,35 +4,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/wholelayout"
+    android:background="#8BC34A"
     tools:context=".MainActivity">
 
-
-    <TextView
-        android:id="@+id/Score"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.434"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.092" />
+    <LinearLayout
+        android:id="@+id/linear"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:background="#d7ccc8"
+        android:gravity="center"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
+        <TextView
+            android:layout_gravity="start"
+            android:textSize="15dp"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:text="Score : "/>
+        <TextView
+            android:layout_gravity="end"
+            android:layout_width="50dp"
+            android:id="@+id/Score"
+            android:layout_height="match_parent"
+            android:text="0000"/>
+    </LinearLayout>
 
     <GridView
         android:id="@+id/grid_view"
-        android:layout_width="252dp"
-        android:layout_height="335dp"
-        android:layout_margin="20dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="#d7ccc8"
         android:horizontalSpacing="5dp"
         android:numColumns="4"
         android:verticalSpacing="5dp"
+        app:layout_constraintStart_toEndOf="@id/linear"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.787" />
+        app:layout_constraintTop_toBottomOf="@id/linear">
 
+    </GridView>
 </androidx.constraintlayout.widget.ConstraintLayout>
